profilelist1exp/unpackaged/objects/Custom_End_User_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>Account__r.Account_Classification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account__r.Account_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>End-User Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom End User Accounts</relationshipLabel>
        <relationshipName>Include_Exclude_End_User_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affinity_Id__c</fullName>
        <formula>Account__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <formula>Account__r.GTM_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Program</label>
        <referenceTo>Deal_Program__c</referenceTo>
        <relationshipLabel>Custom End User Accounts</relationshipLabel>
        <relationshipName>Include_Exclude_End_User_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <formula>Account__r.Sales_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unassigned_End_user_account__c</fullName>
        <formula>Account__r.Unassigned_End_User_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unassigned End User Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>End User Account</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom End User Accounts</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom End User Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateIncludeExclude</fullName>
        <active>true</active>
        <description>Restrict user to select Inlcude and exclude together</description>
        <errorConditionFormula>AND(Include__c = true , Exclude__c = true)</errorConditionFormula>
        <errorMessage>Select either Include or Exclude</errorMessage>
    </validationRules>
</CustomObject>